update openApi spec file and updateUser controller
